# Credence-Contracts

./: .gitignore  ARBITRATION_TEST_PATTERNS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_FIX_SUMMARY.md  PR_DESCRIPTION.md  PR_DESCRIPTION_746.md  PR_DESCRIPTION_SIGNATURE_DOMAIN.md  README.md  ours.rs  test_lockup_gate.rs
contracts/credence_bond/: Cargo.toml
contracts/credence_bond/benches/: cost.rs  harness.rs  update_cost_baseline.rs
contracts/credence_bond/docs/: iter-chunks.md  pagination.md  testutils-feature.md
contracts/credence_bond/src/: batch.rs  chaos_token.rs  claims.rs  early_exit_penalty.rs  events.rs  fork_base.rs  fork_divergent.rs  fork_ours.rs  fork_theirs.rs  idempotency.rs  invariants.rs  iter_chunks.rs  lib.rs  migration.rs  nonce.rs  parameters.rs  rolling_bond.rs  safe_token.rs  same_ledger_liquidation_guard.rs  slash_history.rs  slashing.rs  storage.rs  test.rs  test_access_control.rs  test_attestation_batch.rs  test_bond_drift.rs  test_chaos.rs  test_claim_expiry_sweep.rs  test_differential.rs  test_events_schema.rs  test_helpers.rs  test_invariants.rs  test_monotonicity_ordering.rs  test_reentrancy.rs  test_reentrancy_hostile_token.rs  test_slashing.rs  test_tiered_bond.rs  test_unauthorized_token.rs  test_weighted_attestation.rs  tiered_bond.rs  (+3 more)
contracts/credence_bond/src/fuzz/: test_bond_fuzz.rs
contracts/credence_bond/tests/: datakey_fingerprint.rs  differential.rs  indexer_replay.rs  proptest_tier.proptest-regressions  proptest_tier.rs
contracts/credence_math/: Cargo.toml
contracts/credence_math/src/: lib.rs
docs/: BATCH_ATOMICITY.md  CROSS_CONTRACT_TRUST.md  EVENT_INDEXING.md  HISTORICAL_ROLES.md  README.md  TWO_STEP_ADMIN.md  UPGRADE.md  access-control.md  admin-roles.md  arbitration.md  architecture.md  auth-tree-threats.md  batch-operations.md  bond-crate-layout.md  bond-drift-detection.md  chaos-testing.md  (+18 more)
(+71 files in other folders)
