[package]
name = "credence_bond"
version = "0.1.0"
edition = "2021"
# Disable autodiscovery of the stale `tests/` integration crates. Those files
# (test_access_control.rs, test_fee_on_transfer_rejection.rs) target an
# abandoned token-based contract API (set_token/get_nonce/create_bond_with_rolling)
# that does not exist in the canonical contract; they never compiled. The bond
# invariants suite lives in the library's #[cfg(test)] modules instead, so the
# whole package builds and tests green with `cargo test -p credence_bond`.
autotests = false

[lib]
# `rlib` is added alongside `cdylib` so integration tests under `tests/` can link
# the contract as a normal Rust dependency. The on-chain `cdylib` wasm artifact
# is unaffected.
crate-type = ["cdylib", "rlib"]

# Indexer replay invariant suite. Declared explicitly because `autotests = false`
# disables autodiscovery of the stale token-API integration crates in `tests/`.
[[test]]
name = "indexer_replay"
path = "tests/indexer_replay.rs"

[dependencies]
credence_errors = { path = "../credence_errors" }
timelock = { path = "../timelock" }
soroban-sdk = { version = "22.0", features = ["testutils"] }

[dev-dependencies]
proptest = "1.11.0"

[features]
default = []
fork-ours = []
fork-base = []
fork-theirs = []
fork-canonical = []
