[package]
name = "credence_math"
version = "0.1.0"
edition = "2021"
description = "Shared overflow-safe arithmetic helpers for Credence contracts."

[lib]
crate-type = ["rlib"]

[dependencies]
ethnum = { version = "1.5.2", default-features = false }
credence_errors = { path = "../credence_errors" }
soroban-sdk = { version = "22.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
